--- a/style.css
+++ b/style.css
@@ -4,4 +4,11 @@ button{
 
 .img{
     width : 150px;
+    border-radius: 5px;
+}
+
+.image{
+    display: flex;
+    gap :100px;
+    justify-content: center;
 }
